@@ -3,6 +3,7 @@
 	* src/boards/submarine.c: fixed to display the help
 	* src/boards/reversecount.c: fixed highlighting the dice was resseting the dic to 1
 	* src/boards/reading.c: fixed bug: the game starts when help is displayed
+	* src/boards/shapegame.c: fixed bug: if the item is back to the list, it remains marked found
 
 2003-08-18  Bruno coudoin  <bruno.coudoin@free.fr>
 
